--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
     <!-- Controls panel -->
     <div id="controls-panel">
       <div id="alpha-control">
-        <label for="alpha-slider">Alpha: <span id="alpha-value">0.9</span></label>
+        <label for="alpha-slider">Alpha (Position): <span id="alpha-value">0.9</span></label>
         <input type="range" id="alpha-slider" min="0.01" max="1" step="0.01" value="0.9">
+      </div>
+      <div id="alpha-velocity-control">
+        <label for="alpha-velocity-slider">Alpha (Velocity): <span id="alpha-velocity-value">0.9</span></label>
+        <input type="range" id="alpha-velocity-slider" min="0.01" max="1" step="0.01" value="0.9">
+      </div>
+      <div id="alpha-acceleration-control">
+        <label for="alpha-acceleration-slider">Alpha (Acceleration): <span id="alpha-acceleration-value">0.9</span></label>
+        <input type="range" id="alpha-acceleration-slider" min="0.01" max="1" step="0.01" value="0.9">
       </div>
       <div id="point-info">
         <div id="point-details"></div>
