feat: Add roll angle component to speed comparison view and update related calculations

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               <option value="an">AN (North Acceleration)</option>
               <option value="ae">AE (East Acceleration)</option>
               <option value="ad">AD (Down Acceleration)</option>
+              <option value="roll">Roll (Angle)</option>
             </select>
           </div>
           <canvas id="speed-comparison-canvas" width="800" height="600"></canvas>
