Add wind-adjusted AoA option to speed comparison view and optimize wind velocity calculation using numerical gradient

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
               <option value="windE">Wind E (East Wind)</option>
               <option value="windD">Wind D (Down Wind)</option>
               <option value="windSpeed">Wind Speed (Magnitude)</option>
+              <option value="windAoA">Wind-Adjusted AoA</option>
             </select>
           </div>
           <canvas id="speed-comparison-canvas" width="800" height="600"></canvas>
